# cortex_m0_MA

./: README.md
Appendices/: Appendix_C_FFT_Source_Code.c
Appendices/Appendix_A_LLVM_Cross-Compile_baremetal_ARM/: README.md
LLVM_baremetal_ARM/: README.md
LLVM_baremetal_ARM/patches/: CMakePolicy.cmake.patch
LLVM_baremetal_ARM/src/: cortexm0.ld
LLVM_baremetal_ARM/src/stage_ARM/: stage_ARM.sh
LLVM_baremetal_ARM/src/stage_ARM_crt/: stage_AMR_compiler-rt.sh
LLVM_baremetal_ARM/src/sysroot/: README.md
Supplementaries/Supplementary_A_LLVM_Cross-Compile_baremetal_ARM/: Supplementary_A_LLVM_Cross-Compile_baremetal_ARM.docx
Supplementaries/Supplementary_B1_Full_Xilinx_BD_Cortex-M0/: Supplementary_B1_Full_Xilinx_BD_Cortex-M0.docx
Supplementaries/Supplementary_B2_Simplified_Xilinx_BD_Cortex-M0/: Supplementary_B2_Simplified_Xilinx_BD_Cortex-M0.docx
Supplementaries/Supplementary_C_FFT_Source_Code/: Supplementary_C_FFT_Source_Code.c  Supplementary_C_FFT_Source_Code.docx
Supplementaries/Supplementary_D_opcode_analysis/: Supplementary_D_opcode_analysis.docx
Supplementaries/Supplementary_E_IAR_Dynamic_IC_Profiling/: Supplementary_E_IAR_Dynamic_IC_Profiling.docx
Supplementaries/Supplementary_F_cortex_m0_verification/: Supplementary_F_cortex_m0_verification.docx
tools/codeblocks_workspace/op_analysis/src/: CMakeLists.txt  readme.txt
tools/codeblocks_workspace/op_analysis/src/tools/: Function.h  InstrPairTracker.h  MachineBlock.cpp  MachineBlock.h  OpcodeAnalyzer.cpp
tools/codeblocks_workspace/trace_trimmer/src/: CMakeLists.txt  trace_trimmer.cpp
(+18 files in other folders)
